color contrast fix on tutorial menu

--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body{
     position: fixed;
     padding-top: 80px;
     z-index: 1;
-    background-color: rgb(201, 173, 148);
+    border-right: 1px solid black;
 }
 .sidenav a{
     display: block;
@@ -17,4 +17,10 @@ body{
     padding-right: 15px;
     padding-top: 10px;
     text-decoration: none;
+    color: black;
+    transition: all 2s ease-in;
+}
+
+.sidenav a:hover {
+    text-decoration: underline;
 }
